Changes for Measure::Everything

1.002   2018-02-27T13:17:32
    - added Measure::Everything::Adapter::Test


1.001   2015-08-01T18:01:35
    - added some docs


1.000	2015-07-31T22:37:36
	- first release to CPAN

