@@ -1,19 +1,22 @@
+# This file is generated by Dist::Zilla::Plugin::CPANFile v6.017
+# Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
+
 requires "Fcntl" => "0";
 requires "InfluxDB::LineProtocol" => "0";
 requires "Module::Runtime" => "0";
 requires "base" => "0";
 requires "perl" => "5.010";
-requires "strict" => "0";
-requires "warnings" => "0";
 
 on 'build' => sub {
   requires "Module::Build" => "0.28";
 };
 
 on 'test' => sub {
-  requires "Module::Pluggable" => "0";
+  requires "File::Spec" => "0";
+  requires "File::Temp" => "0";
+  requires "IO::Handle" => "0";
+  requires "IPC::Open3" => "0";
   requires "Test::More" => "0";
-  requires "lib" => "0";
 };
 
 on 'configure' => sub {
