@@ -1,45 +1,7 @@
 name    = Measure-Everything
-author  = Thomas Klausner <domm@cpan.org>
+author  = Thomas Klausner <domm@plix.at>
 license = Perl_5
 copyright_holder = Thomas Klausner
-copyright_year   = 2015
+copyright_year   = 2015 - 2021
 
-[GatherDir]
-include_dotfiles = 1
-exclude_match = local
-exclude_match = cpanfile*
-
-[PruneCruft]
-[ManifestSkip]
-[MetaYAML]
-[MetaJSON]
-[License]
-[ReadmeAnyFromPod]
-type = markdown
-filename = README.md
-location = root
-
-[ExecDir]
-[ShareDir]
-[Repository]
-git_remote = github
-
-[MetaResources]
-[CheckChangeLog]
-[Manifest]
-[TestRelease]
-[ConfirmRelease]
-[CPANFile]
-
-[AutoPrereqs]
-skip = ^testlib
-
-[VersionFromModule]
-[ModuleBuild]
-[PodWeaver]
-
-[InstallGuide]
-
-[@Git]
-[CopyFilesFromBuild]
-copy = cpanfile
+[@Author::DOMM]
