@@ -1,5 +1,9 @@
 Changes for Measure::Everything
 
+{{$NEXT}}
+    - dist housekeeping, Dist::Zilla::PluginBundle::Author::DOMM
+
+
 1.002   2018-02-27T13:17:32
     - added Measure::Everything::Adapter::Test
 
